--- a/web/ssh-treminal-ui/package.json
+++ b/web/ssh-treminal-ui/package.json
@@ -10,7 +10,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
+    "@stomp/stompjs": "^7.0.0",
+    "axios": "^1.6.0",
+    "element-plus": "^2.10.4",
+    "sockjs-client": "^1.6.0",
     "vue": "^3.5.17",
+    "vue-router": "^4.0.0",
+    "vuedraggable": "^4.1.0",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0"
   },
