--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 server.port=8080
+
+# STOMP WebSocket Configuration
+spring.websocket.sockjs.heartbeat-time=25000
+spring.websocket.stomp.broker.heartbeat.send-interval=25000
+spring.websocket.stomp.broker.heartbeat.receive-interval=25000
+
+# Message size limits for STOMP
+spring.websocket.stomp.max-text-message-size=2097152
+spring.websocket.stomp.max-binary-message-size=2097152
+spring.websocket.stomp.max-message-buffer-size=2097152
+
+# Logging configuration for STOMP debugging
+logging.level.org.springframework.messaging=INFO
+logging.level.org.springframework.web.socket=INFO
+logging.level.com.fufu.terminal=DEBUG
