--- a/web/ssh-treminal-ui/package.json
+++ b/web/ssh-treminal-ui/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "vue": "^3.5.17",
     "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0"
+    "xterm-addon-fit": "^0.8.0",
+    "@stomp/stompjs": "^7.0.0",
+    "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
