--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,9 @@ spring.websocket.stomp.max-text-message-size=2097152
 spring.websocket.stomp.max-binary-message-size=2097152
 spring.websocket.stomp.max-message-buffer-size=2097152
 
-# Logging configuration for STOMP debugging
-logging.level.org.springframework.messaging=INFO
-logging.level.org.springframework.web.socket=INFO
+# Enhanced logging configuration for debugging
+logging.level.org.springframework.messaging=DEBUG
+logging.level.org.springframework.web.socket=DEBUG
 logging.level.com.fufu.terminal=DEBUG
+logging.level.org.springframework.messaging.simp=DEBUG
+logging.level.org.springframework.web.socket.sockjs=DEBUG
