--- a/web/ssh-treminal-ui/package.json
+++ b/web/ssh-treminal-ui/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^3.5.17",
+    "vue-router": "^4.2.5",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
     "@stomp/stompjs": "^7.0.0",
